--- a/Corte2/euro.html
+++ b/Corte2/euro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El surgimiento de la sociedad industrial: Un analisis critico</title>
+    <title>Sociología Eurocentrica vs Sociología desde las epistemologías del sur</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/nav.css">
@@ -58,8 +58,7 @@
         </a>
 
         <div class="project-header">
-            <h1 class="project-title">El surgimiento de la sociedad industrial: Un analisis critico - Compiló: Mgs:
-                Álvaro Diaz</h1>
+            <h1 class="project-title">Sociología Eurocentrica vs Sociología desde las epistemologías del sur - Compiló: Mgs: Álvaro Diaz</h1>
 
             <div class="project-meta">
                 <div class="meta-item">
@@ -81,7 +80,7 @@
             <div class="project-info">
 
 
-                <img src="surgimiento.jpg" class="mejorada" alt="surgimiento">
+                <img src="euro vs epis.jpg" class="mejorada" alt="surgimiento">
 
                 <div class="project-links">
                     <a href="../glosario.html" class="project-link demo">
@@ -99,75 +98,37 @@
                         </div>
                         <h3 class="resource-title">1. Elaborar un glosario con las palabras resaltadas en negrilla en el
                             texto.</h3>
+<b>Modernidad</b>: Proceso histórico y cultural iniciado en Europa que se caracteriza por el desarrollo de la razón, la ciencia, la industrialización y la idea de progreso, muchas veces imponiendo una visión única del conocimiento y la sociedad. <br><br>
 
-                        <b>Sociedad industrial</b>: Organización social basada en la producción mecanizada y el trabajo
-                        en fábricas.
-                        <br>
+<b>Perspectivas del sur global</b>: Enfoques teóricos y sociales que valoran los conocimientos, experiencias y luchas de los pueblos históricamente marginados por el colonialismo y el eurocentrismo. <br><br>
 
-                        <b>Ilustración</b>: Movimiento intelectual del siglo XVIII que promovió la razón, la ciencia y
-                        la libertad como bases del progreso.
-                        <br>
+<b>Métodos críticos y reflexivos</b>: Estrategias de pensamiento y análisis que cuestionan las estructuras de poder, promueven la autocrítica y buscan comprender la realidad desde distintas miradas. <br><br>
 
-                        <b>Revolución francesa</b>: Proceso Politico y social (1789-1799) que derribó la monarquía
-                        absoluta y proclamó la igualdad y los derechos ciudadanos.
-                        <br>
+<b>Colonialidad del saber</b>: Concepto que explica cómo el conocimiento occidental ha dominado e invisibilizado otras formas de saber, manteniendo relaciones de poder coloniales en la educación y la ciencia. <br><br>
 
-                        <b>Saberes sociales</b>: Conocimientos que permiten comprender y analizar el comportamiento
-                        humano en sociedad.
-                        <br>
+<b>Modernidad en el sur global</b>: Adaptación y reinterpretación de la modernidad en los contextos latinoamericanos, africanos o asiáticos, donde se entrelazan tradiciones locales con influencias occidentales. <br><br>
 
-                        <b>Clase media</b>: Grupo social intermedio entre ricos y pobres, formado por profesionales,
-                        comerciantes y empleados.
-                        <br>
-                        <b>Cultura</b>: Conjunto de costumbres, valores, creencias y manifestaciones artísticas de una
-                        sociedad.
-                        <br>
+<b>Crítica decolonial</b>: Corriente de pensamiento que cuestiona las estructuras coloniales aún presentes en la cultura, la política y el conocimiento, promoviendo una visión más justa y plural del mundo. <br><br>
 
-                        <b>Desigualdad</b>: Diferencia injusta en el acceso a recursos, oportunidades o derechos. <br>
+<b>Sociedad</b>: Conjunto de personas que comparten una cultura, normas e instituciones, y que interactúan para organizar su vida colectiva. <br><br>
 
-                        <b>Explotación</b>: Uso abusivo del trabajo de una persona para obtener beneficio económico.
-                        <br>
+<b>La cultura</b>: Conjunto de valores, creencias, prácticas y conocimientos que caracterizan a una comunidad o grupo social. <br><br>
 
-                        <b>Mano de obra</b>: Conjunto de trabajadores disponibles para realizar tareas productivas.
-                        <br>
+<b>Colonialidad</b>: Herencia del colonialismo que continúa afectando las formas de pensar, de gobernar y de producir conocimiento, incluso después del fin del dominio político colonial. <br><br>
 
-                        <b>Tensiones sociales</b>: Conflictos o desacuerdos entre distintos grupos de una sociedad.
-                        <br>
+<b>Diversidad epistémica</b>: Reconocimiento y valoración de las múltiples formas de conocimiento existentes en el mundo, más allá del pensamiento occidental. <br><br>
 
-                        <b>Conflictos laborales</b>: Disputas entre trabajadores y empleadores por condiciones de
-                        trabajo, salario o derechos.
-                        <br>
+<b>Metodologías positivas</b>: Enfoques de investigación basados en la observación, la medición y la objetividad, propios del pensamiento científico occidental moderno. <br><br>
 
-                        <b>La máquina de vapor</b>: Invento que usa vapor para generar energía y mover maquinaria, clave
-                        en la Revolución Industrial.
-                        <br>
+<b>Diversidad de experiencias y saberes</b>: Reconocimiento de que existen múltiples formas de comprender y explicar el mundo, basadas en diferentes contextos culturales, sociales y geográficos. <br><br>
 
-                        <b>Telar mecánico</b>: Máquina que automatiza el tejido de telas, aumentando la producción
-                        textil.
-                        <br>
+<b>Perspectiva eurocéntrica</b>: Visión del mundo que coloca a Europa y su cultura como el centro del conocimiento, la historia y el progreso, marginando otras realidades. <br><br>
 
-                        <b>Producción en masa</b>: Fabricación de grandes cantidades de productos estandarizados
-                        mediante maquinaria.
-                        <br>
+<b>Autores clásicos</b>: Pensadores que sentaron las bases de la filosofía, la ciencia o las humanidades modernas, generalmente desde una perspectiva europea (como Kant, Descartes o Marx). <br><br>
 
-                        <b>Clase trabajadora</b>: Grupo social formado por personas que viven de su trabajo asalariado
-                        en fábricas o servicios.
-                        <br>
+<b>Autores contemporáneos</b>: Intelectuales actuales que reflexionan sobre los problemas del mundo moderno y proponen nuevas formas de pensar desde el diálogo intercultural y decolonial (como Boaventura de Sousa Santos o Walter Mignolo). <br><br>
 
-                        <b>Movilización social</b>: Acción colectiva de personas que se organizan para exigir cambios
-                        sociales o políticos.
-                        <br>
-
-                        <b>Sindicatos</b>: Organizaciones de trabajadores que defienden sus derechos y mejores
-                        condiciones laborales.
-                        <br>
-
-                        <b>Partidos políticos</b>: Grupos organizados que buscan participar en el poder y representar
-                        intereses sociales.
-                        <br>
-
-                        <b>Derechos de los trabajadores</b>: Normas que garantizan condiciones justas, seguridad y
-                        respeto en el trabajo.
+<b>Colonialidad del saber</b>: (Reiterado por su importancia) Forma de dominación que impone el conocimiento europeo como universal, negando la validez de los saberes de los pueblos colonizados o del sur global. <br><br>
                     </div>
 
                     <style>
@@ -208,9 +169,13 @@
                         <div class="resource-icon">
                             <i class="fa-regular fa-note-sticky"></i>
                         </div>
-                        <h3 class="resource-title">2. Elaborar un mapa mental con las palabras del glosario.</h3>
+                        <h3 class="resource-title">2. Indague en que consiste la colonialidad del saber.</h3>
                         <p class="resource-desc">
-                            <img src="conceptosindustrial.png" alt="Mapa mental" id="imagenZoom">
+                            Rta: La colonialidad del saber es un concepto desarrollado por pensadores decoloniales que explica cómo el conocimiento producido desde contextos europeos y coloniales ha ejercido una posición dominante sobre otras formas de conocimiento. Este fenómeno ha llevado a que el saber occidental sea considerado como el único válido y universal, mientras que los saberes de los pueblos indígenas, afrodescendientes y del sur global han sido desvalorizados, marginados o ignorados. <br>
+
+                            Esta colonialidad implica una relación de poder en la que ciertos conocimientos son privilegiados y otros excluidos, reproduciendo las estructuras de dominación colonial incluso después del fin del colonialismo político. <br>
+
+                            La crítica a la colonialidad del saber busca reconocer la diversidad epistémica, es decir, la existencia de múltiples formas de producir y comprender el conocimiento, promoviendo un diálogo intercultural que valore los distintos modos de entender y transformar el mundo.
                         </p>
                     </div>
 
@@ -218,28 +183,10 @@
                         <div class="resource-icon">
                             <i class="fa-solid fa-pen-to-square"></i>
                         </div>
-                        <h3 class="resource-title">3. ¿Indagar como la evolución de los saberes sociales durante este periodo afectó a la sociedad?</h3>
+                        <h3 class="resource-title">3. Elaborar un mapa mental con las palabras del glosario.</h3>
                         <p class="resource-desc">
-                            Rta: La evolución de los saberes sociales durante la aparición de la sociedad industrial transformó profundamente la estructura y la vida social, económica y política. En concreto:
-<br>
-Difusión del pensamiento crítico y racional (Ilustración): favoreció nuevas ideas y cuestionamientos sobre la autoridad, la economía y la organización social, lo que facilitó reformas y la adopción de tecnologías.
-<br>
-Aumento de la educación y la cultura: la expansión de la educación permitió la formación de una clase media urbana más numerosa y con mayor capacidad de participación social y política.
-<br>
-Cambio en la organización del trabajo: la técnica (máquina de vapor, telar mecánico) y la producción en masa cambiaron la naturaleza del trabajo: surgieron empleos fabriles, jornadas reguladas por la máquina y especialización, lo que reestructuró la vida cotidiana.
-<br>
-Emergencia de la clase trabajadora urbana: la concentración en ciudades y el trabajo en fábricas generaron una clase trabajadora con intereses comunes y condiciones laborales precarias.
-<br>
-Aumento de desigualdades y explotación: el progreso técnico y la acumulación de capital produjeron riqueza concentrada y, al mismo tiempo, explotación de la mano de obra, provocando desigualdad y problemas sociales y de salud.<br>
-
-Tensiones sociales y conflictos laborales: las malas condiciones y la desigualdad fomentaron conflictos laborales, huelgas y protestas; surgieron demandas por derechos y mejoras.
-<br>
-Movilización social y organización política: como respuesta aparecieron sindicatos y partidos políticos que organizaron la lucha colectiva y presionaron por leyes laborales y derechos.
-<br>
-Transformación de la esfera pública: el intercambio de saberes y la educación incrementaron la participación cívica y el debate público sobre trabajo, justicia y bienestar.
-<br>
-Efectos a largo plazo sobre el Estado y la legislación: las presiones sociales llevaron a reformas institucionales (regulación laboral, seguridad social y derechos de los trabajadores) que reconfiguraron el papel del Estado en la economía y en la protección social.<br>
-La evolución de los saberes sociales durante la industrialización no solo impulsó innovación y crecimiento económico, sino que también provocó profundas transformaciones sociales: creó nuevas clases sociales, generó conflictos por la explotación, motivó la organización colectiva y condujo, finalmente, a cambios políticos y legislativos que buscaban corregir desigualdades y mejorar condiciones laborales.</p>
+                            <img src="eurovsepis.png" alt="Mapa mental" id="imagenZoom">
+                        </p>
                     </div>
                     <div class="lightbox" id="lightbox">
                         <img id="imagenAmpliada" src="">
