--- a/Corte2/reloj.html
+++ b/Corte2/reloj.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El surgimiento de la sociedad industrial: Un analisis critico</title>
+    <title>El Origen del Reloj de Pulsera: De la Nobleza a la Vida Cotidiana</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/nav.css">
@@ -58,7 +58,7 @@
         </a>
 
         <div class="project-header">
-            <h1 class="project-title">El surgimiento de la sociedad industrial: Un analisis critico - Compiló: Mgs:
+            <h1 class="project-title">El Origen del Reloj de Pulsera: De la Nobleza a la Vida Cotidiana - Compiló: Mgs:
                 Álvaro Diaz</h1>
 
             <div class="project-meta">
@@ -80,8 +80,10 @@
         <div class="project-content">
             <div class="project-info">
 
-
-                <img src="surgimiento.jpg" class="mejorada" alt="surgimiento">
+<div class="pdf-container" style="height: 1000px !important;">
+            <embed src="ORIGEN DEL RELOJ Y EL TIEMPO oki.pdf" type="application/pdf"/>
+        </div>
+                
 
                 <div class="project-links">
                     <a href="../glosario.html" class="project-link demo">
@@ -97,77 +99,48 @@
                         <div class="resource-icon">
                             <i class="fa-solid fa-book"></i>
                         </div>
-                        <h3 class="resource-title">1. Elaborar un glosario con las palabras resaltadas en negrilla en el
-                            texto.</h3>
+                        <h3 class="resource-title">1. Realizar una lectura exploratoria y subrayar los conceptos sociológicos y elaborar el respectivo glosario.</h3>
+                        <p class="resource-desc">
+                            Rta: Glosario de términos sociológicos:<br>
+                            <br>
+                           <b>Reloj de pulsera</b>: Objeto cronográfico portátil que evolucionó de adorno de élite a instrumento masivo de medición del tiempo y símbolo cultural. 
 
-                        <b>Sociedad industrial</b>: Organización social basada en la producción mecanizada y el trabajo
-                        en fábricas.
-                        <br>
+ <br><br>
 
-                        <b>Ilustración</b>: Movimiento intelectual del siglo XVIII que promovió la razón, la ciencia y
-                        la libertad como bases del progreso.
-                        <br>
+<b>Relojería</b>: Arte y técnica de fabricar mecanismos de tiempo; campo que articula tradición artesanal, innovación tecnológica y mercado. 
 
-                        <b>Revolución francesa</b>: Proceso Politico y social (1789-1799) que derribó la monarquía
-                        absoluta y proclamó la igualdad y los derechos ciudadanos.
-                        <br>
+ <br><br>
 
-                        <b>Saberes sociales</b>: Conocimientos que permiten comprender y analizar el comportamiento
-                        humano en sociedad.
-                        <br>
+<b>Democratización</b>: Proceso mediante el cual un bien o práctica (aquí, el reloj) pasa de ser exclusivo de élites a estar al alcance de amplios sectores sociales. 
 
-                        <b>Clase media</b>: Grupo social intermedio entre ricos y pobres, formado por profesionales,
-                        comerciantes y empleados.
-                        <br>
-                        <b>Cultura</b>: Conjunto de costumbres, valores, creencias y manifestaciones artísticas de una
-                        sociedad.
-                        <br>
+ <br><br>
 
-                        <b>Desigualdad</b>: Diferencia injusta en el acceso a recursos, oportunidades o derechos. <br>
+<b>Modernidad</b>: Marco histórico-cultural asociado a la industrialización, la velocidad y la objetivación del tiempo como recurso medible y aprovechable. 
 
-                        <b>Explotación</b>: Uso abusivo del trabajo de una persona para obtener beneficio económico.
-                        <br>
+ <br><br>
 
-                        <b>Mano de obra</b>: Conjunto de trabajadores disponibles para realizar tareas productivas.
-                        <br>
+<b>Simbolismo de estatus</b>: Valor social de un objeto que comunica posición, prestigio o identidad (p. ej., relojes de lujo como Patek Philippe). 
 
-                        <b>Tensiones sociales</b>: Conflictos o desacuerdos entre distintos grupos de una sociedad.
-                        <br>
+ <br><br>
 
-                        <b>Conflictos laborales</b>: Disputas entre trabajadores y empleadores por condiciones de
-                        trabajo, salario o derechos.
-                        <br>
+<b>Tecnificación</b>: Incorporación de innovaciones técnicas (movimientos de cuarzo, resistencia al agua, cristales de zafiro) que transforman funcionalidad y accesibilidad. 
 
-                        <b>La máquina de vapor</b>: Invento que usa vapor para generar energía y mover maquinaria, clave
-                        en la Revolución Industrial.
-                        <br>
+ <br><br>
 
-                        <b>Telar mecánico</b>: Máquina que automatiza el tejido de telas, aumentando la producción
-                        textil.
-                        <br>
+<b>Masificación</b>: Extensión de un producto o práctica a grandes masas (Seiko y la producción en cuarzo como ejemplo). 
 
-                        <b>Producción en masa</b>: Fabricación de grandes cantidades de productos estandarizados
-                        mediante maquinaria.
-                        <br>
+ <br><br>
 
-                        <b>Clase trabajadora</b>: Grupo social formado por personas que viven de su trabajo asalariado
-                        en fábricas o servicios.
-                        <br>
+<b>Función militar</b>: Uso instrumental del reloj en contextos bélicos que impulsó su adopción generalizada y el desarrollo de especificaciones técnicas. 
 
-                        <b>Movilización social</b>: Acción colectiva de personas que se organizan para exigir cambios
-                        sociales o políticos.
-                        <br>
+ <br><br>
 
-                        <b>Sindicatos</b>: Organizaciones de trabajadores que defienden sus derechos y mejores
-                        condiciones laborales.
-                        <br>
+<b>Género y objetos</b>: Relación entre objetos culturales y normas de género (el paso del reloj como accesorio femenino a herramienta masculina). 
 
-                        <b>Partidos políticos</b>: Grupos organizados que buscan participar en el poder y representar
-                        intereses sociales.
-                        <br>
+ <br><br>
 
-                        <b>Derechos de los trabajadores</b>: Normas que garantizan condiciones justas, seguridad y
-                        respeto en el trabajo.
+<b>Cultura material</b>: Conjunto de objetos y prácticas (relojes) que condensan valores, identidades y transformaciones sociales. 
+                        </p>
                     </div>
 
                     <style>
@@ -203,47 +176,46 @@
                             cursor: zoom-out;
                         }
                     </style>
-
-                    <div class="resource-card">
-                        <div class="resource-icon">
-                            <i class="fa-regular fa-note-sticky"></i>
-                        </div>
-                        <h3 class="resource-title">2. Elaborar un mapa mental con las palabras del glosario.</h3>
-                        <p class="resource-desc">
-                            <img src="conceptosindustrial.png" alt="Mapa mental" id="imagenZoom">
-                        </p>
-                    </div>
-
+                    
                     <div class="resource-card">
                         <div class="resource-icon">
                             <i class="fa-solid fa-pen-to-square"></i>
                         </div>
-                        <h3 class="resource-title">3. ¿Indagar como la evolución de los saberes sociales durante este periodo afectó a la sociedad?</h3>
+                        <h3 class="resource-title">2. ¿Cómo ha influido la evolución del reloj de pulsera en la percepción y el uso del tiempo en la sociedad moderna?.</h3>
                         <p class="resource-desc">
-                            Rta: La evolución de los saberes sociales durante la aparición de la sociedad industrial transformó profundamente la estructura y la vida social, económica y política. En concreto:
+                            Rta: La evolución del reloj de pulsera contribuyó a transformar el tiempo de una experiencia cíclica, contextual y social en un recurso mensurable, planificable y individualizado. Inicialmente ornamental y vinculado a estatus, el reloj se volvió una herramienta práctica (aviación, guerra, trabajo) que exigió precisión y sincronización. La difusión masiva (por innovación técnica y producción en serie) integró la noción de puntualidad y planificación en la vida cotidiana: horarios laborales, transporte, deporte y rutinas personales. Así, el tiempo dejó de ser percepción colectiva y rítmica para convertirse en tiempo homogéneo, medido y gestionado como eficiencia —un rasgo clave de la modernidad—.
+                        </p>
+                    </div>
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fa-regular fa-note-sticky"></i>
+                        </div>
+                        <h3 class="resource-title">3. ¿De qué manera la historia del reloj de pulsera refleja y reproduce las normas y estereotipos de género en diferentes épocas y contextos culturales?.</h3>
+                        <p class="resource-desc">
+                            Rta: El texto muestra un desplazamiento simbólico: el reloj de pulsera surge como accesorio femenino (joya para la nobleza) y, con cambios técnicos y funcionales (Santos-Dumont, aviación, guerra), se resignifica como instrumento masculino asociado a profesionalismo, aventura y autoridad. Esta transición revela normas victorianas sobre la feminidad (delicadeza, adorno) y la masculinidad (practicidad, control). Además, la adopción militar y profesional reforzó la idea de que la tecnología “útil” es masculina, mientras que lo ornamental es femenino. En etapas posteriores aparecen modelos unisex y cambios culturales que desafían esas fronteras, pero la historia del objeto refleja claramente cómo los artefactos participan en la construcción y reproducción de roles de género.
+                        </p>
+                    </div>
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fa-regular fa-note-sticky"></i>
+                        </div>
+                        <h3 class="resource-title">4. ¿Cómo ha cambiado el significado y el valor del reloj de pulsera en la sociedad contemporánea, y qué implica esto para nuestra comprensión de la relación entre tecnología, cultura y sociedad?.</h3>
+                        <p class="resource-desc">
+                            Rta: Hoy el reloj integra múltiples significados: sigue siendo instrumento de medida, pero además es objeto de moda, herencia, estatus y tecnología conectada (relojes inteligentes). La coexistencia de piezas masivas, deportivos, de lujo y smartwatches muestra la pluralidad de funciones sociales que un mismo artefacto puede tener. Esto evidencia que la tecnología no es neutral: se entrelaza con identidades, mercados y prácticas culturales. La persistencia del reloj pese a los smartphones implica que los objetos conservan significado simbólico (relación con tradición, precisión, estética). Desde una perspectiva sociológica, la evolución del reloj demuestra la reciprocidad tecnología-sociedad: las necesidades sociales (aviación, guerra, deporte, conectividad) impulsan innovaciones; a su vez, esas innovaciones reconfiguran comportamientos, valores y formas de vida.
+                        </p>
+                    </div>
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fa-regular fa-note-sticky"></i>
+                        </div>
+                        <h3 class="resource-title">5. Elaborar una cuartilla con lo que más le llamo la atención al realizar la lectura del texto anterior.</h3>
+                        <p class="resource-desc">
+                            Rta: Lo que más me sorprendió del texto fue la trayectoria del reloj de pulsera como espejo de transformaciones sociales profundas: del lujo femenino a la herramienta cotidiana del mundo moderno. Esa transición sintetiza cómo un objeto aparentemente trivial condensa cambios en género, tecnología, economía y guerra. Me impactó especialmente el papel de la aviación y la Primera Guerra Mundial: circunstancias prácticas y violentas que, paradójicamente, democratizaron un bien inicialmente elitista. La historia del Cartier Santos y de los relojes militares muestra que las exigencias del mundo real (manos ocupadas, condiciones extremas) obligaron a repensar el diseño y la función, imponiendo la utilidad sobre la ornamentación.
 <br>
-Difusión del pensamiento crítico y racional (Ilustración): favoreció nuevas ideas y cuestionamientos sobre la autoridad, la economía y la organización social, lo que facilitó reformas y la adopción de tecnologías.
-<br>
-Aumento de la educación y la cultura: la expansión de la educación permitió la formación de una clase media urbana más numerosa y con mayor capacidad de participación social y política.
-<br>
-Cambio en la organización del trabajo: la técnica (máquina de vapor, telar mecánico) y la producción en masa cambiaron la naturaleza del trabajo: surgieron empleos fabriles, jornadas reguladas por la máquina y especialización, lo que reestructuró la vida cotidiana.
-<br>
-Emergencia de la clase trabajadora urbana: la concentración en ciudades y el trabajo en fábricas generaron una clase trabajadora con intereses comunes y condiciones laborales precarias.
-<br>
-Aumento de desigualdades y explotación: el progreso técnico y la acumulación de capital produjeron riqueza concentrada y, al mismo tiempo, explotación de la mano de obra, provocando desigualdad y problemas sociales y de salud.<br>
+También es notable cómo la innovación técnica (cristales, hermeticidad, cuarzo) y la competencia internacional (Suiza vs. Japón) transformaron la producción y el acceso. Seiko, con su movimiento de cuarzo, no solo mejoró la precisión: cambió la estructura del mercado y posibilitó que la precisión dejara de ser privilegio de pocos. Finalmente, la permanencia del reloj en la era del smartphone me obligó a reflexionar sobre el valor simbólico de los objetos: más allá de medir segundos, el reloj articula memoria, estatus, estética y pertenencia. En un mundo acelerado, mantener un objeto en la muñeca es también una práctica cultural —una afirmación de identidad en medio de la homogeneización tecnológica—. El relato del reloj es, en suma, una invitación a leer la historia social a través de los objetos cotidianos.
+                        </p>
+                    </div>
 
-Tensiones sociales y conflictos laborales: las malas condiciones y la desigualdad fomentaron conflictos laborales, huelgas y protestas; surgieron demandas por derechos y mejoras.
-<br>
-Movilización social y organización política: como respuesta aparecieron sindicatos y partidos políticos que organizaron la lucha colectiva y presionaron por leyes laborales y derechos.
-<br>
-Transformación de la esfera pública: el intercambio de saberes y la educación incrementaron la participación cívica y el debate público sobre trabajo, justicia y bienestar.
-<br>
-Efectos a largo plazo sobre el Estado y la legislación: las presiones sociales llevaron a reformas institucionales (regulación laboral, seguridad social y derechos de los trabajadores) que reconfiguraron el papel del Estado en la economía y en la protección social.<br>
-La evolución de los saberes sociales durante la industrialización no solo impulsó innovación y crecimiento económico, sino que también provocó profundas transformaciones sociales: creó nuevas clases sociales, generó conflictos por la explotación, motivó la organización colectiva y condujo, finalmente, a cambios políticos y legislativos que buscaban corregir desigualdades y mejorar condiciones laborales.</p>
-                    </div>
-                    <div class="lightbox" id="lightbox">
-                        <img id="imagenAmpliada" src="">
-                    </div>
                 </div>
             </div>
     </main>
