--- a/Corte2/sociologia-disciplinacientifica.html
+++ b/Corte2/sociologia-disciplinacientifica.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El surgimiento de la sociedad industrial: Un analisis critico</title>
+    <title>La Sociología: Una disciplina científica en busca de la comprensión de la
+                                    sociedad</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/nav.css">
@@ -58,7 +59,8 @@
         </a>
 
         <div class="project-header">
-            <h1 class="project-title">El surgimiento de la sociedad industrial: Un analisis critico - Compiló: Mgs:
+            <h1 class="project-title">La Sociología: Una disciplina científica en busca de la comprensión de la
+                                    sociedad - Compiló: Mgs:
                 Álvaro Diaz</h1>
 
             <div class="project-meta">
@@ -81,7 +83,7 @@
             <div class="project-info">
 
 
-                <img src="surgimiento.jpg" class="mejorada" alt="surgimiento">
+                <img src="cientifica.jpg" class="mejorada" alt="surgimiento">
 
                 <div class="project-links">
                     <a href="../glosario.html" class="project-link demo">
@@ -100,74 +102,45 @@
                         <h3 class="resource-title">1. Elaborar un glosario con las palabras resaltadas en negrilla en el
                             texto.</h3>
 
-                        <b>Sociedad industrial</b>: Organización social basada en la producción mecanizada y el trabajo
-                        en fábricas.
-                        <br>
+                        <b>Disciplina científica</b>: Es una rama del conocimiento organizada y estructurada que utiliza métodos científicos (observación, análisis y experimentación) para estudiar y explicar fenómenos específicos de la realidad. <br><br>
 
-                        <b>Ilustración</b>: Movimiento intelectual del siglo XVIII que promovió la razón, la ciencia y
-                        la libertad como bases del progreso.
-                        <br>
+<b>Procesos de cambios</b>: Son las transformaciones que experimenta una sociedad en sus aspectos económicos, culturales, tecnológicos y políticos a lo largo del tiempo. Implican evolución y adaptación constante. <br><br>
 
-                        <b>Revolución francesa</b>: Proceso Politico y social (1789-1799) que derribó la monarquía
-                        absoluta y proclamó la igualdad y los derechos ciudadanos.
-                        <br>
+<b>Revolución industrial</b>: Fue un periodo histórico iniciado en el siglo XVIII que marcó el paso de la producción manual a la mecanizada, impulsando el desarrollo tecnológico, urbano y económico. <br><br>
 
-                        <b>Saberes sociales</b>: Conocimientos que permiten comprender y analizar el comportamiento
-                        humano en sociedad.
-                        <br>
+<b>La ilustración</b>: Movimiento intelectual y cultural del siglo XVIII que promovió la razón, la ciencia y la educación como medios para liberar al ser humano de la ignorancia y los dogmas religiosos. <br><br>
 
-                        <b>Clase media</b>: Grupo social intermedio entre ricos y pobres, formado por profesionales,
-                        comerciantes y empleados.
-                        <br>
-                        <b>Cultura</b>: Conjunto de costumbres, valores, creencias y manifestaciones artísticas de una
-                        sociedad.
-                        <br>
+<b>Explicaciones mágicas</b>: Son interpretaciones basadas en creencias sobrenaturales o mitológicas para justificar fenómenos naturales o sociales, sin recurrir al razonamiento científico. <br><br>
 
-                        <b>Desigualdad</b>: Diferencia injusta en el acceso a recursos, oportunidades o derechos. <br>
+<b>Visiones tradicionales de la realidad</b>: Formas de entender el mundo que se basan en costumbres, religión o autoridad heredada, sin cuestionamientos ni comprobación científica. <br><br>
 
-                        <b>Explotación</b>: Uso abusivo del trabajo de una persona para obtener beneficio económico.
-                        <br>
+<b>Liberación de dogmas</b>: Proceso mediante el cual las personas dejan atrás creencias impuestas o incuestionables, favoreciendo el pensamiento libre, crítico y racional. <br><br>
 
-                        <b>Mano de obra</b>: Conjunto de trabajadores disponibles para realizar tareas productivas.
-                        <br>
+<b>Explicaciones racionales y empíricas</b>: Son interpretaciones que se fundamentan en el razonamiento lógico y en la observación o comprobación directa de los hechos mediante la experiencia. <br><br>
 
-                        <b>Tensiones sociales</b>: Conflictos o desacuerdos entre distintos grupos de una sociedad.
-                        <br>
+<b>Visiones desencantadas de la realidad</b>: Perspectivas que eliminan lo sobrenatural y explican el mundo desde la ciencia, la lógica y la observación objetiva. <br><br>
 
-                        <b>Conflictos laborales</b>: Disputas entre trabajadores y empleadores por condiciones de
-                        trabajo, salario o derechos.
-                        <br>
+<b>Estructuras</b>: Son los sistemas o conjuntos organizados de elementos que sostienen y dan forma a la sociedad, como las instituciones políticas, económicas o familiares. <br><br>
 
-                        <b>La máquina de vapor</b>: Invento que usa vapor para generar energía y mover maquinaria, clave
-                        en la Revolución Industrial.
-                        <br>
+<b>Problemas sociales</b>: Situaciones que afectan negativamente a una parte significativa de la población, como la pobreza, la desigualdad, el desempleo o la falta de acceso a la educación. <br><br>
 
-                        <b>Telar mecánico</b>: Máquina que automatiza el tejido de telas, aumentando la producción
-                        textil.
-                        <br>
+<b>Observación</b>: Método básico de la investigación científica que consiste en analizar de manera directa los hechos o comportamientos para obtener información objetiva y verificada. <br><br>
 
-                        <b>Producción en masa</b>: Fabricación de grandes cantidades de productos estandarizados
-                        mediante maquinaria.
-                        <br>
+<b>Experimentación en la investigación social</b>: Técnica que utiliza pruebas controladas o comparaciones para comprobar hipótesis sobre fenómenos sociales y comprender sus causas y efectos. <br><br>
 
-                        <b>Clase trabajadora</b>: Grupo social formado por personas que viven de su trabajo asalariado
-                        en fábricas o servicios.
-                        <br>
+<b>Lucha de clases</b>: Conflicto entre distintos grupos sociales con intereses económicos opuestos, principalmente entre la clase trabajadora y la clase propietaria. <br><br>
 
-                        <b>Movilización social</b>: Acción colectiva de personas que se organizan para exigir cambios
-                        sociales o políticos.
-                        <br>
+<b>Alineación</b>: Estado en el que una persona se siente desconectada o sin control sobre su trabajo, su entorno o los resultados de sus acciones dentro de la sociedad. <br><br>
 
-                        <b>Sindicatos</b>: Organizaciones de trabajadores que defienden sus derechos y mejores
-                        condiciones laborales.
-                        <br>
+<b>Sociedad capitalista</b>: Sistema económico basado en la propiedad privada, la libre competencia y la búsqueda de beneficios, donde los medios de producción pertenecen a particulares. <br><br>
 
-                        <b>Partidos políticos</b>: Grupos organizados que buscan participar en el poder y representar
-                        intereses sociales.
-                        <br>
+<b>Solidaridad social</b>: Valor que impulsa la ayuda mutua, la cooperación y el apoyo entre los miembros de una comunidad para alcanzar el bienestar común. <br><br>
 
-                        <b>Derechos de los trabajadores</b>: Normas que garantizan condiciones justas, seguridad y
-                        respeto en el trabajo.
+<b>Cohesión en la sociedad</b>: Grado de unión y sentido de pertenencia que mantiene a las personas integradas, colaborando en armonía dentro de un grupo o comunidad. <br><br>
+
+<b>Sensibilidad social</b>: Capacidad de percibir, comprender y responder con empatía ante los problemas o injusticias que afectan a otros en la sociedad. <br><br>
+
+<b>Decisiones informadas y críticas</b>: Elecciones basadas en el análisis de información confiable, la reflexión racional y la evaluación de consecuencias, evitando actuar por impulso o desinformación. <br><br>
                     </div>
 
                     <style>
@@ -210,7 +183,7 @@
                         </div>
                         <h3 class="resource-title">2. Elaborar un mapa mental con las palabras del glosario.</h3>
                         <p class="resource-desc">
-                            <img src="conceptosindustrial.png" alt="Mapa mental" id="imagenZoom">
+                            <img src="cientifica.png" alt="Mapa mental" id="imagenZoom">
                         </p>
                     </div>
 
@@ -220,26 +193,14 @@
                         </div>
                         <h3 class="resource-title">3. ¿Indagar como la evolución de los saberes sociales durante este periodo afectó a la sociedad?</h3>
                         <p class="resource-desc">
-                            Rta: La evolución de los saberes sociales durante la aparición de la sociedad industrial transformó profundamente la estructura y la vida social, económica y política. En concreto:
-<br>
-Difusión del pensamiento crítico y racional (Ilustración): favoreció nuevas ideas y cuestionamientos sobre la autoridad, la economía y la organización social, lo que facilitó reformas y la adopción de tecnologías.
-<br>
-Aumento de la educación y la cultura: la expansión de la educación permitió la formación de una clase media urbana más numerosa y con mayor capacidad de participación social y política.
-<br>
-Cambio en la organización del trabajo: la técnica (máquina de vapor, telar mecánico) y la producción en masa cambiaron la naturaleza del trabajo: surgieron empleos fabriles, jornadas reguladas por la máquina y especialización, lo que reestructuró la vida cotidiana.
-<br>
-Emergencia de la clase trabajadora urbana: la concentración en ciudades y el trabajo en fábricas generaron una clase trabajadora con intereses comunes y condiciones laborales precarias.
-<br>
-Aumento de desigualdades y explotación: el progreso técnico y la acumulación de capital produjeron riqueza concentrada y, al mismo tiempo, explotación de la mano de obra, provocando desigualdad y problemas sociales y de salud.<br>
+                            Rta: La sociología sigue siendo una disciplina relevante y necesaria porque permite comprender los cambios, problemas y dinámicas que afectan a las sociedades modernas. A través del análisis científico de las estructuras sociales, la cultura, la economía y la política, la sociología ayuda a identificar las causas de fenómenos como la desigualdad, la pobreza, la violencia o la discriminación. <br>
 
-Tensiones sociales y conflictos laborales: las malas condiciones y la desigualdad fomentaron conflictos laborales, huelgas y protestas; surgieron demandas por derechos y mejoras.
-<br>
-Movilización social y organización política: como respuesta aparecieron sindicatos y partidos políticos que organizaron la lucha colectiva y presionaron por leyes laborales y derechos.
-<br>
-Transformación de la esfera pública: el intercambio de saberes y la educación incrementaron la participación cívica y el debate público sobre trabajo, justicia y bienestar.
-<br>
-Efectos a largo plazo sobre el Estado y la legislación: las presiones sociales llevaron a reformas institucionales (regulación laboral, seguridad social y derechos de los trabajadores) que reconfiguraron el papel del Estado en la economía y en la protección social.<br>
-La evolución de los saberes sociales durante la industrialización no solo impulsó innovación y crecimiento económico, sino que también provocó profundas transformaciones sociales: creó nuevas clases sociales, generó conflictos por la explotación, motivó la organización colectiva y condujo, finalmente, a cambios políticos y legislativos que buscaban corregir desigualdades y mejorar condiciones laborales.</p>
+Además, fomenta la sensibilidad social y el pensamiento crítico, ya que impulsa a las personas y a los gobiernos a tomar decisiones informadas basadas en la evidencia y no en prejuicios o suposiciones. <br>
+
+También sigue siendo esencial porque orienta la formulación de políticas públicas, el trabajo comunitario, la educación, la investigación social y la búsqueda de cohesión y solidaridad dentro de las comunidades. <br>
+
+La sociología mantiene su importancia porque ayuda a comprender cómo funciona la sociedad, cómo cambian las relaciones humanas y cómo construir un entorno más justo, equitativo y participativo. <br>
+                        </p>
                     </div>
                     <div class="lightbox" id="lightbox">
                         <img id="imagenAmpliada" src="">
