--- a/Corte2/futbol.html
+++ b/Corte2/futbol.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El surgimiento de la sociedad industrial: Un analisis critico</title>
+    <title>LA SOCIOLOGÍA DEL FÚTBOL</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/nav.css">
@@ -58,7 +58,7 @@
         </a>
 
         <div class="project-header">
-            <h1 class="project-title">El surgimiento de la sociedad industrial: Un analisis critico - Compiló: Mgs:
+            <h1 class="project-title">LA SOCIOLOGÍA DEL FÚTBOL - Compiló: Mgs:
                 Álvaro Diaz</h1>
 
             <div class="project-meta">
@@ -80,8 +80,10 @@
         <div class="project-content">
             <div class="project-info">
 
-
-                <img src="surgimiento.jpg" class="mejorada" alt="surgimiento">
+<div class="pdf-container" style="height: 700px !important;">
+            <embed src="SOCIOLOGÍA DEL FUTBOL.pdf" type="application/pdf"/>
+        </div>
+                
 
                 <div class="project-links">
                     <a href="../glosario.html" class="project-link demo">
@@ -97,77 +99,34 @@
                         <div class="resource-icon">
                             <i class="fa-solid fa-book"></i>
                         </div>
-                        <h3 class="resource-title">1. Elaborar un glosario con las palabras resaltadas en negrilla en el
-                            texto.</h3>
+                        <h3 class="resource-title">1. Realizar una lectura exploratoria del texto y elaborar el glosario con los términos desconocidos.</h3>
+<b>Gomoso</b>: Aficionado apasionado que comparte euforias, tristezas y derrotas con su grupo; vínculo emocional y comunitario alrededor del fútbol. <br><br>
 
-                        <b>Sociedad industrial</b>: Organización social basada en la producción mecanizada y el trabajo
-                        en fábricas.
-                        <br>
+<b>Fútbol-ocio</b>: Práctica del fútbol entendida como forma de ocio que genera bienestar, recreación y aprendizaje personal y colectivo. <br><br>
 
-                        <b>Ilustración</b>: Movimiento intelectual del siglo XVIII que promovió la razón, la ciencia y
-                        la libertad como bases del progreso.
-                        <br>
+<b>Ocio</b>: Tiempo y actividades destinadas al disfrute, la recreación y el descanso, que contribuyen al bienestar físico y emocional. <br><br>
 
-                        <b>Revolución francesa</b>: Proceso Politico y social (1789-1799) que derribó la monarquía
-                        absoluta y proclamó la igualdad y los derechos ciudadanos.
-                        <br>
+<b>Torneo de integración institucional</b>: Competencia deportiva organizada entre miembros de instituciones (en este caso, docentes del Tolima) con fines recreativos, comunitarios y culturales. <br><br>
 
-                        <b>Saberes sociales</b>: Conocimientos que permiten comprender y analizar el comportamiento
-                        humano en sociedad.
-                        <br>
+<b>Memoria histórica</b>: Registro colectivo de experiencias y relatos que construyen la identidad y el sentido de pertenencia de un grupo a lo largo del tiempo. <br><br>
 
-                        <b>Clase media</b>: Grupo social intermedio entre ricos y pobres, formado por profesionales,
-                        comerciantes y empleados.
-                        <br>
-                        <b>Cultura</b>: Conjunto de costumbres, valores, creencias y manifestaciones artísticas de una
-                        sociedad.
-                        <br>
+<b>Euforía</b>: Estado de gran alegría o exaltación colectiva que suele acompañar victorias o momentos intensos en el juego. <br><br>
 
-                        <b>Desigualdad</b>: Diferencia injusta en el acceso a recursos, oportunidades o derechos. <br>
+<b>Sentipensante</b>: Enfoque que integra lo sensible y lo pensante; valorar tanto las emociones como la reflexión en la comprensión social. <br><br>
 
-                        <b>Explotación</b>: Uso abusivo del trabajo de una persona para obtener beneficio económico.
-                        <br>
+<b>Integración intercultural</b>: Proceso por el cual distintas culturas (formas de vida, costumbres y saberes) se encuentran y generan vínculos a través de una actividad común. <br><br>
 
-                        <b>Mano de obra</b>: Conjunto de trabajadores disponibles para realizar tareas productivas.
-                        <br>
+<b>Recreación</b>: Actividad dirigida a la diversión y el esparcimiento que contribuye a la salud física y psíquica. <br><br>
 
-                        <b>Tensiones sociales</b>: Conflictos o desacuerdos entre distintos grupos de una sociedad.
-                        <br>
+<b>Observación participante</b>: Técnica cualitativa de investigación donde el investigador se inserta en el contexto estudiado para recoger información desde la experiencia directa. <br><br>
 
-                        <b>Conflictos laborales</b>: Disputas entre trabajadores y empleadores por condiciones de
-                        trabajo, salario o derechos.
-                        <br>
+<b>Enfoque mixto-cualitativo</b>: Diseño de investigación que combina técnicas cuantitativas (encuestas) y cualitativas (entrevistas, observación) para un análisis más completo. <br><br>
 
-                        <b>La máquina de vapor</b>: Invento que usa vapor para generar energía y mover maquinaria, clave
-                        en la Revolución Industrial.
-                        <br>
+<b>Familia deportiva</b>: Sentido de pertenencia y relación afectiva que se forma entre los integrantes de un equipo y su entorno (jugadores, delegados, hinchas). <br><br>
 
-                        <b>Telar mecánico</b>: Máquina que automatiza el tejido de telas, aumentando la producción
-                        textil.
-                        <br>
+<b>Espectáculo deportivo</b>: Dimensión comercial y mediática del deporte que transforma el juego en un producto para ser visto y consumido por audiencias masivas. <br><br>
 
-                        <b>Producción en masa</b>: Fabricación de grandes cantidades de productos estandarizados
-                        mediante maquinaria.
-                        <br>
-
-                        <b>Clase trabajadora</b>: Grupo social formado por personas que viven de su trabajo asalariado
-                        en fábricas o servicios.
-                        <br>
-
-                        <b>Movilización social</b>: Acción colectiva de personas que se organizan para exigir cambios
-                        sociales o políticos.
-                        <br>
-
-                        <b>Sindicatos</b>: Organizaciones de trabajadores que defienden sus derechos y mejores
-                        condiciones laborales.
-                        <br>
-
-                        <b>Partidos políticos</b>: Grupos organizados que buscan participar en el poder y representar
-                        intereses sociales.
-                        <br>
-
-                        <b>Derechos de los trabajadores</b>: Normas que garantizan condiciones justas, seguridad y
-                        respeto en el trabajo.
+<b>Bienestar personal y social</b>: Beneficios individuales y colectivos derivados de la práctica del deporte y el ocio (salud, sociabilidad, cohesión). <br><br>
                     </div>
 
                     <style>
@@ -203,46 +162,40 @@
                             cursor: zoom-out;
                         }
                     </style>
-
-                    <div class="resource-card">
-                        <div class="resource-icon">
-                            <i class="fa-regular fa-note-sticky"></i>
-                        </div>
-                        <h3 class="resource-title">2. Elaborar un mapa mental con las palabras del glosario.</h3>
-                        <p class="resource-desc">
-                            <img src="conceptosindustrial.png" alt="Mapa mental" id="imagenZoom">
-                        </p>
-                    </div>
-
+                    
                     <div class="resource-card">
                         <div class="resource-icon">
                             <i class="fa-solid fa-pen-to-square"></i>
                         </div>
-                        <h3 class="resource-title">3. ¿Indagar como la evolución de los saberes sociales durante este periodo afectó a la sociedad?</h3>
+                        <h3 class="resource-title">2. ¿Cómo se puede describir la relación entre el fútbol y la sociedad, según la perspectiva de Eduardo Galeano?.</h3>
                         <p class="resource-desc">
-                            Rta: La evolución de los saberes sociales durante la aparición de la sociedad industrial transformó profundamente la estructura y la vida social, económica y política. En concreto:
-<br>
-Difusión del pensamiento crítico y racional (Ilustración): favoreció nuevas ideas y cuestionamientos sobre la autoridad, la economía y la organización social, lo que facilitó reformas y la adopción de tecnologías.
-<br>
-Aumento de la educación y la cultura: la expansión de la educación permitió la formación de una clase media urbana más numerosa y con mayor capacidad de participación social y política.
-<br>
-Cambio en la organización del trabajo: la técnica (máquina de vapor, telar mecánico) y la producción en masa cambiaron la naturaleza del trabajo: surgieron empleos fabriles, jornadas reguladas por la máquina y especialización, lo que reestructuró la vida cotidiana.
-<br>
-Emergencia de la clase trabajadora urbana: la concentración en ciudades y el trabajo en fábricas generaron una clase trabajadora con intereses comunes y condiciones laborales precarias.
-<br>
-Aumento de desigualdades y explotación: el progreso técnico y la acumulación de capital produjeron riqueza concentrada y, al mismo tiempo, explotación de la mano de obra, provocando desigualdad y problemas sociales y de salud.<br>
+                            Rta: Para Eduardo Galeano el fútbol es mucho más que un juego: es un fenómeno social total que refleja pasiones, identidades y contradicciones de la sociedad. Galeano describe el fútbol como una experiencia originaria —“todos los bebés se asoman al mundo entre las piernas de la madre gritando gol”— que conecta lo íntimo con lo colectivo. Desde su perspectiva: <br>
 
-Tensiones sociales y conflictos laborales: las malas condiciones y la desigualdad fomentaron conflictos laborales, huelgas y protestas; surgieron demandas por derechos y mejoras.
+El fútbol es pasión de multitudes y eje cultural: reúne emociones, rituales y narrativas que construyen sentido y pertenencia.<br>
+
+Es espejo social: muestra valores, jerarquías y tensiones que también existen en la política, la economía y la vida cotidiana.
 <br>
-Movilización social y organización política: como respuesta aparecieron sindicatos y partidos políticos que organizaron la lucha colectiva y presionaron por leyes laborales y derechos.
+Sostiene una crítica a la industrialización del deporte: a medida que el fútbol se convierte en industria y espectáculo pierde, según él, parte de su belleza originaria —pasa del placer al deber— y se reconfigura en negocio con muchos espectadores y pocos protagonistas.
 <br>
-Transformación de la esfera pública: el intercambio de saberes y la educación incrementaron la participación cívica y el debate público sobre trabajo, justicia y bienestar.
+No obstante, Galeano celebra los actos de libertad y juego desinhibido —los futbolistas que “gambetean” por el puro goce— como resquicios de la esencia lúdica y emancipadora del juego.
 <br>
-Efectos a largo plazo sobre el Estado y la legislación: las presiones sociales llevaron a reformas institucionales (regulación laboral, seguridad social y derechos de los trabajadores) que reconfiguraron el papel del Estado en la economía y en la protección social.<br>
-La evolución de los saberes sociales durante la industrialización no solo impulsó innovación y crecimiento económico, sino que también provocó profundas transformaciones sociales: creó nuevas clases sociales, generó conflictos por la explotación, motivó la organización colectiva y condujo, finalmente, a cambios políticos y legislativos que buscaban corregir desigualdades y mejorar condiciones laborales.</p>
+En síntesis, el fútbol para Galeano es una práctica cultural que articula ocio, identidad, economía y política, capaz de revelar tanto la alegría comunitaria como las contradicciones ligadas al mercado y al espectáculo.
+                        </p>
                     </div>
-                    <div class="lightbox" id="lightbox">
-                        <img id="imagenAmpliada" src="">
+                    <div class="resource-card">
+                        <div class="resource-icon">
+                            <i class="fa-regular fa-note-sticky"></i>
+                        </div>
+                        <h3 class="resource-title">3. Elaborar una cuartilla sobre lo que piensa del partido de futbol de hoy Colombia vs Bolivia.</h3>
+                        <p class="resource-desc">
+                            Rta: El partido entre Colombia y Bolivia enfrenta no solo dos selecciones, sino también expectativas, identidades y emociones que trascienden el césped. Para muchos aficionados, la camiseta es un emblema de pertenencia que convoca recuerdos, esperanzas y la necesidad de celebración colectiva. En la cancha, los jugadores actúan como representantes de esas expectativas: su desempeño técnica y tácticamente se interpreta como un reflejo del estado del fútbol nacional. <br>
+
+Un partido entre Colombia y Bolivia suele poner sobre la mesa contrastes de estilo: la movilidad, la presión y la creatividad colombiana contra la disciplina, la resistencia física y el orden táctico boliviano. Más allá del resultado, lo valioso es el sentido comunitario que genera: amigos reunidos frente al televisor, tertulias en las plazas, el intercambio de opiniones y la experiencia compartida del nerviosismo y la euforia. Ese componente social convierte el encuentro en una ceremonia contemporánea donde se reafirman lazos y se procesan frustraciones colectivas.
+<br>
+Sin embargo, también es necesario mirar con ojo crítico las dimensiones comerciales y mediáticas que rodean el evento. La presión por resultados rápidos, las narrativas sensacionalistas y el espectáculo pueden invisibilizar procesos de formación, desarrollo y la función social del deporte como espacio de ocio y salud. Para que el fútbol recupere su dimensión más humana, debe conjugar la competencia con la formación, el respeto por el juego y la inclusión de experiencias locales que refuercen su papel en la comunidad.<br>
+
+En definitiva, Colombia vs Bolivia es más que un marcador: es una oportunidad para celebrar la pasión colectiva, valorar el trabajo de quienes forman el deporte y reflexionar sobre cómo integrar el fútbol en proyectos de cohesión social y bienestar. Gane quien gane, lo que pervive es la capacidad del fútbol de unir, emocionar y generar relatos comunes que nos hacen parte de algo mayor.
+                        </p>
                     </div>
                 </div>
             </div>
